--- a/pharmacy.html
+++ b/pharmacy.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resources/css/pharmastyle.css">
     <title>Pharmacy locations</title>
-    <link rel="stylesheet" href="resources\css\pharmastyle.css">
 </head>
 <body>
-    <div class="mapouter">
-        <div class="gmap_canvas">
-            <iframe width="600" height="500" id="gmap_canvas"
+    <div class="map">
+        <div class="gmap">
+            <iframe width="600" height="600" id="gmap"
                 src="https://maps.google.com/maps?q=pharmacy&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
                 scrolling="no" marginheight="0" marginwidth="0"></iframe>
-            <a href="https://123movies-to.org">123movies</a>
         </div>
+    </div>
+    <div class="online">
+        <p>Online Orders: </p>
+        <a href="https://www.1mg.com/" target="_blank"><img src="resources/images/1mg.png" height="100" width="100"> 1mg</a>
+        <a href="https://www.medlife.com/" target="_blank"><img src="resources/images/Medlife.png" height="100" width="100"> Medlife</a>
+        <a href="https://pharmeasy.in/" target="_blank"><img src="resources/images/Pharmeasy.png" height="100" width="100"> Pharmeasy</a>
+        <a href="https://www.netmeds.com/" target="_blank"><img src="resources/images/Netmeds.png" height="100" width="100"> Netmeds</a>
     </div>
 </body>
 </html>
