--- a/index.html
+++ b/index.html
@@ -11,43 +11,127 @@
 
 <body>
     <header id="header">
-        <h1 class="title">SWASTH AI</h1>
+        <h1 class="title" style="align-items: center; color: white;">SWASTH AI</h1>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Team</a></li>
+            <li><a href="#Front-page">Home</a></li>
+            <li><a href="#Team">Team</a></li>
         </ul>
     </header>
+
     <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#0099ff" fill-opacity="1"
             d="M0,192L48,170.7C96,149,192,107,288,117.3C384,128,480,192,576,213.3C672,235,768,213,864,197.3C960,181,1056,171,1152,192C1248,213,1344,267,1392,293.3L1440,320L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
         </path>
     </svg>
-    <div class="container">
-        <div class="box">
-            <i class="fa fa-search" style="font-size:36px;color:black"></i>
-            <a href="#" target="_blank">
-                <h1 class="Names" style="color: black;">Symptom Search</h1>
-            </a>
+    <section id="Front-page">
+        <div class="container">
+            <div class="box">
+                <i class="fa fa-search" style="font-size:36px;color:black"></i>
+                <a href="#" target="_blank">
+                    <h1 class="Names" style="color: black;">Symptom Search</h1>
+                </a>
+            </div>
+            <div class="box">
+                <i class="fa fa-medkit" style="font-size:36px"></i>
+                <a href="pharmacy.html" target="_blank">
+                    <h1 class="Names" style="color: black;">Pharmacy</h1>
+                </a>
+            </div>
+            <div class="box">
+                <i class="fa fa-heartbeat" style="font-size:36px"></i>
+                <a href="#" target="_blank">
+                    <h1 class="Names" style="color: black;">Find Doctor</h1>
+                </a>
+            </div>
+            <div class="box">
+                <i class="fa fa-user-circle" style="font-size:36px"></i>
+                <a href="#" target="_blank">
+                    <h1 class="Names" style="color: black;">My Portal</h1>
+                </a>
+            </div>
         </div>
-        <div class="box">
-            <i class="fa fa-medkit" style="font-size:36px"></i>
-            <a href="pharmacy.html" target="_blank">
-                <h1 class="Names" style="color: black;">Pharmacy</h1>
-            </a>
-        </div>
-        <div class="box">
-            <i class="fa fa-heartbeat" style="font-size:36px"></i>
-            <a href="#" target="_blank">
-                <h1 class="Names" style="color: black;">Find Doctor</h1>
-            </a>
-        </div>
-        <div class="box">
-            <i class="fa fa-user-circle" style="font-size:36px"></i>
-            <a href="#" target="_blank">
-                <h1 class="Names" style="color: black;">My Portal</h1>
-            </a>
-        </div>
+    </section>
+    <section id="Team">
+        <div class="con">
+            <div class="card">
+                <div class="custom-shape-divider-top-1599319301">
+                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                        <path d="M0,0V7.23C0,65.52,268.63,112.77,600,112.77S1200,65.52,1200,7.23V0Z" class="shape-fill"></path>
+                    </svg>
+                </div>
+                <div class="front">
+                    <br>
+                    <img src="resources/images/Aagam.jpeg" class="name" height="200px" width="200px">
+                    <br><br>
+                    <h1 style="text-align: center; font-family: 'Inconsolata', monospace;">Aagam Jain</h1>
+                    <br><br>
+                </div>
+                <div class="back">
+                    <br><br><br>
+                    <p class="backside">
+                        - <i class="fa fa-map-marker"></i> INDIA
+                    </p>
+                    <br>
+                    <p class="backside">
+                        - <i class="fa fa-graduation-cap"></i> Birla Institue of Technology, Mesra
+                    </p>
+                    <br>
+                    <p class="backside">
+                        - <i class="fa fa-phone" style="font-size:15px"></i> <a href="tel: +91 9490104656"> +91
+                            9490104656</a>
+                    </p>
+                    <br><br><br>
+                    <a href="mailto: aagamjain113@gmail.com" class="icons">MAIL</a>
+                    <a href="https://linkedin.com/in/aagam-jain-b5760619a/" class="icons" target="_blank"><i
+                            class="fa fa-linkedin-square" style="font-size: 40px;"></i></a>
+                    <a href="https://github.com/Aagam-Jain-113" class="icons" target="_blank"><i class="fa fa-github-square"
+                            style="font-size: 40px;"></i></a>
+                    <br><br><br>
+                </div>
+            </div>
+            <div class="con1">
+                <div class="card">
+                    <div class="custom-shape-divider-top-1599319301">
+                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                        <path d="M0,0V7.23C0,65.52,268.63,112.77,600,112.77S1200,65.52,1200,7.23V0Z" class="shape-fill"></path>
+                    </svg>
+                </div>
+                    <div class="front">
+                        <br>
+                        <img src="resources/images/Saurav.jpeg" class="name" height="200px" width="200px">
+                        <br><br>
+                        <h1 style="text-align: center; font-family: 'Inconsolata', monospace;">Saurav Karmakar</h1>
+                        <br><br>
+                    </div>
+                    <div class="back">
+                        <br><br><br>
+                        <p class="backside">
+                            - <i class="fa fa-map-marker"></i> INDIA
+                        </p>
+                        <br>
+                        <p class="backside">
+                            - <i class="fa fa-graduation-cap"></i> Birla Institue of Technology, Mesra
+                        </p>
+                        <br>
+                        <p class="backside">
+                            - <i class="fa fa-phone" style="font-size:15px"></i> <a href="tel: +91 8696710525"> +91
+                                8696710525</a>
+                        </p>
+                        <br><br><br>
+                        <a href="mailto:thesauravkarmakar@gmail.com" class="icons">MAIL</a>
+                        <a href="https://www.linkedin.com/in/sauravkarmakar/" class="icons" target="_blank"><i
+                                class="fa fa-linkedin-square" style="font-size: 40px;"></i></a>
+                        <a href="https://github.com/thesauravkarmakar" class="icons" target="_blank"><i class="fa fa-github-square"
+                                style="font-size: 40px;"></i></a>
+                        <br><br><br>
+                    </div>
+                </div>
+    </section>
     </div>
+    <footer>
+        <p style="margin: 0px 80px; font-size: 24px; color: black;"><i class="fa fa-github"> </i> 
+            <a href="https://github.com/Aagam-Jain-113/SwasthAI/tree/master" target="_blank">Github Page</a></p>
+    </footer>
 </body>
 
 </html>
