--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swasth AI</title>
-    <link rel="stylesheet" href="resources\css\style.css">
+    <title>Swasth AIO</title>
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <header id="header">
-        <h1 class="title" style="align-items: center; color: white;">SWASTH AI</h1>
+        <h1 class="title" style="align-items: center; color: white;">SWASTH AIO</h1>
         <ul>
             <li><a href="#Front-page">Home</a></li>
             <li><a href="#Team">Team</a></li>
@@ -33,19 +33,19 @@
             </div>
             <div class="box">
                 <i class="fa fa-medkit" style="font-size:36px"></i>
-                <a href="pharmacy.html" target="_blank">
+                <a href="templates/pharmacy.html" target="_blank">
                     <h1 class="Names" style="color: black;">Pharmacy</h1>
                 </a>
             </div>
             <div class="box">
                 <i class="fa fa-heartbeat" style="font-size:36px"></i>
-                <a href="#" target="_blank">
+                <a href="templates/doctor.html" target="_blank">
                     <h1 class="Names" style="color: black;">Find Doctor</h1>
                 </a>
             </div>
             <div class="box">
                 <i class="fa fa-user-circle" style="font-size:36px"></i>
-                <a href="#" target="_blank">
+                <a href="templates/portal.html" target="_blank">
                     <h1 class="Names" style="color: black;">My Portal</h1>
                 </a>
             </div>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="front">
                     <br>
-                    <img src="resources/images/Aagam.jpeg" class="name" height="200px" width="200px">
+                    <img src="static/img/Aagam.jpeg" class="name" height="200px" width="200px">
                     <br><br>
                     <h1 style="text-align: center; font-family: 'Inconsolata', monospace;">Aagam Jain</h1>
                     <br><br>
@@ -81,11 +81,10 @@
                             9490104656</a>
                     </p>
                     <br><br><br>
-                    <a href="mailto: aagamjain113@gmail.com" class="icons">MAIL</a>
-                    <a href="https://linkedin.com/in/aagam-jain-b5760619a/" class="icons" target="_blank"><i
-                            class="fa fa-linkedin-square" style="font-size: 40px;"></i></a>
-                    <a href="https://github.com/Aagam-Jain-113" class="icons" target="_blank"><i class="fa fa-github-square"
-                            style="font-size: 40px;"></i></a>
+                    <a href="https://linkedin.com/in/aagam-jain-b5760619a/" class="icons" target="_blank">
+                        <i class="fa fa-linkedin-square" style="font-size: 40px;"></i></a>
+                    <a href="https://github.com/Aagam-Jain-113" class="icons" target="_blank">
+                        <i class="fa fa-github-square" style="font-size: 40px;"></i></a>
                     <br><br><br>
                 </div>
             </div>
@@ -98,7 +97,7 @@
                 </div>
                     <div class="front">
                         <br>
-                        <img src="resources/images/Saurav.jpeg" class="name" height="200px" width="200px">
+                        <img src="static/img/Saurav.jpeg" class="name" height="200px" width="200px">
                         <br><br>
                         <h1 style="text-align: center; font-family: 'Inconsolata', monospace;">Saurav Karmakar</h1>
                         <br><br>
@@ -118,7 +117,6 @@
                                 8696710525</a>
                         </p>
                         <br><br><br>
-                        <a href="mailto:thesauravkarmakar@gmail.com" class="icons">MAIL</a>
                         <a href="https://www.linkedin.com/in/sauravkarmakar/" class="icons" target="_blank"><i
                                 class="fa fa-linkedin-square" style="font-size: 40px;"></i></a>
                         <a href="https://github.com/thesauravkarmakar" class="icons" target="_blank"><i class="fa fa-github-square"
@@ -128,10 +126,28 @@
                 </div>
     </section>
     </div>
-    <footer>
-        <p style="margin: 0px 80px; font-size: 24px; color: black;"><i class="fa fa-github"> </i> 
-            <a href="https://github.com/Aagam-Jain-113/SwasthAI/tree/master" target="_blank">Github Page</a></p>
-    </footer>
+
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row">
+      </div>
+      <hr>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-6 col-xs-12">
+          <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by Team Aatmanirbhar Bharat
+          </p>
+        </div>
+
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <ul class="social-icons">
+            <li><a class="github" href="https://github.com/thesauravkarmakar/SwasthAI"><i class="fa fa-github"></i></a></li> 
+          </ul>
+        </div>
+      </div>
+    </div>
+</footer>
 </body>
 
 </html>
