Updating index.html

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             </div>
             <div class="box">
                 <i class="fa fa-medkit" style="font-size:36px"></i>
-                <a href="templates/pharmacy.html" target="_blank">
+                <a href="templates/pharmacy.html" target="_self">
                     <h1 class="Names" style="color: black;">Pharmacy</h1>
                 </a>
             </div>
             <div class="box">
                 <i class="fa fa-heartbeat" style="font-size:36px"></i>
-                <a href="templates/doctor.html" target="_blank">
+                <a href="templates/doctor.html" target="_self">
                     <h1 class="Names" style="color: black;">Find Doctor</h1>
                 </a>
             </div>
