--- a/index.html
+++ b/index.html
@@ -52,80 +52,107 @@
         </div>
     </section>
     <section id="Team">
-        <div class="con">
-            <div class="card">
-                <div class="custom-shape-divider-top-1599319301">
-                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                        <path d="M0,0V7.23C0,65.52,268.63,112.77,600,112.77S1200,65.52,1200,7.23V0Z" class="shape-fill"></path>
-                    </svg>
+        <div class="card">
+            <div class="card-container">
+                <div class="card-item">
+                    <div class="card-header">
+                        <div class="card-header__bg"></div>
+                        <img src="static\img\Aagam.jpeg" class="card-header__img">
+                        <div class="card-process">
+                            <a href="tel: +91 9490104656" class="process__item">
+                                <div class="process-icon follow">
+                                    <i class="fa fa-phone"></i>
+                                </div>
+                                <span class="process-txt">Call</span>
+                            </a>
+                            <a href="mailto: aagamjain113@gmail.com" target="_blank" class="process__item">
+                                <div class="process-icon message">
+                                    <i class="fa fa-google" style="color: red"></i>
+                                </div>
+                                <span class="process-txt">Mail</span>
+                            </a>
+                        </div>
+                        <div class="card-header__text">
+                            <span class="card-header__name">
+                                Aagam Jain
+                            </span>
+                            <span class="card-header__job">
+                                Front-end Developer
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card-social">
+                        <div class="card-social__item">
+                        <a href="https://www.facebook.com/profile.php?id=100008285603080" target="_blank">
+                            <div class="card-social__icon facebook">
+                                <i class="fa fa-facebook-f"></i>
+                            </div></a>
+                        </div>
+                        <div class="card-social__item">
+                            <a href="https://linkedin.com/in/aagam-jain-b5760619a/" target="_blank">
+                            <div class="card-social__icon linkedin">
+                                <i class="fa fa-linkedin"></i>
+                            </div></a>
+                        </div>
+                        <div class="card-social__item">
+                            <a href="https://github.com/Aagam-Jain-113" target="_blank">
+                            <div class="card-social__icon github">
+                                <i class="fa fa-github"></i>
+                            </div></a>
+                        </div>
+                    </div>
                 </div>
-                <div class="front">
-                    <br>
-                    <img src="static/img/Aagam.jpeg" class="name" height="200px" width="200px">
-                    <br><br>
-                    <h1 style="text-align: center; font-family: 'Inconsolata', monospace;">Aagam Jain</h1>
-                    <br><br>
-                </div>
-                <div class="back">
-                    <br><br><br>
-                    <p class="backside">
-                        - <i class="fa fa-map-marker"></i> INDIA
-                    </p>
-                    <br>
-                    <p class="backside">
-                        - <i class="fa fa-graduation-cap"></i> Birla Institue of Technology, Mesra
-                    </p>
-                    <br>
-                    <p class="backside">
-                        - <i class="fa fa-phone" style="font-size:15px"></i> <a href="tel: +91 9490104656"> +91
-                            9490104656</a>
-                    </p>
-                    <br><br><br>
-                    <a href="https://linkedin.com/in/aagam-jain-b5760619a/" class="icons" target="_blank">
-                        <i class="fa fa-linkedin-square" style="font-size: 40px;"></i></a>
-                    <a href="https://github.com/Aagam-Jain-113" class="icons" target="_blank">
-                        <i class="fa fa-github-square" style="font-size: 40px;"></i></a>
-                    <br><br><br>
+                <div class="card-item">
+                    <div class="card-header">
+                        <div class="card-header__bg"></div>
+                        <img src="static\img\Saurav.jpeg" class="card-header__img">
+                        <div class="card-process">
+                            <a href="tel: +91 8696710525" class="process__item">
+                                <div class="process-icon follow">
+                                    <i class="fa fa-phone"></i>
+                                </div>
+                                <span class="process-txt">Call</span>
+                            </a>
+                            <a href="mailto: thesauravkarmakar@gmail.com" target="_blank" class="process__item">
+                                <div class="process-icon message">
+                                    <i class="fa fa-google" style="color: red"></i>
+                                </div>
+                                <span class="process-txt">Mail</span>
+                            </a>
+                        </div>
+                        <div class="card-header__text">
+                            <span class="card-header__name">
+                                Saurav Karmakar
+                            </span>
+                            <span class="card-header__job">
+                                Back-end Developer
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card-social">
+                        <div class="card-social__item">
+                            <a href="https://www.facebook.com/thesauravkarmakar/" target="_blank">
+                            <div class="card-social__icon facebook">
+                                <i class="fa fa-facebook"></i>
+                            </div></a>
+                        </div>
+                        <div class="card-social__item">
+                            <a href="https://www.linkedin.com/in/sauravkarmakar/" target="_blank">
+                            <div class="card-social__icon linkedin">
+                                <i class="fa fa-linkedin"></i>
+                            </div></a>
+                        </div>
+                        <div class="card-social__item">
+                            <a href="https://github.com/thesauravkarmakar" target="_blank">
+                            <div class="card-social__icon github">
+                                <i class="fa fa-github"></i>
+                            </div></a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="con1">
-                <div class="card">
-                    <div class="custom-shape-divider-top-1599319301">
-                    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                        <path d="M0,0V7.23C0,65.52,268.63,112.77,600,112.77S1200,65.52,1200,7.23V0Z" class="shape-fill"></path>
-                    </svg>
-                </div>
-                    <div class="front">
-                        <br>
-                        <img src="static/img/Saurav.jpeg" class="name" height="200px" width="200px">
-                        <br><br>
-                        <h1 style="text-align: center; font-family: 'Inconsolata', monospace;">Saurav Karmakar</h1>
-                        <br><br>
-                    </div>
-                    <div class="back">
-                        <br><br><br>
-                        <p class="backside">
-                            - <i class="fa fa-map-marker"></i> INDIA
-                        </p>
-                        <br>
-                        <p class="backside">
-                            - <i class="fa fa-graduation-cap"></i> Birla Institue of Technology, Mesra
-                        </p>
-                        <br>
-                        <p class="backside">
-                            - <i class="fa fa-phone" style="font-size:15px"></i> <a href="tel: +91 8696710525"> +91
-                                8696710525</a>
-                        </p>
-                        <br><br><br>
-                        <a href="https://www.linkedin.com/in/sauravkarmakar/" class="icons" target="_blank"><i
-                                class="fa fa-linkedin-square" style="font-size: 40px;"></i></a>
-                        <a href="https://github.com/thesauravkarmakar" class="icons" target="_blank"><i class="fa fa-github-square"
-                                style="font-size: 40px;"></i></a>
-                        <br><br><br>
-                    </div>
-                </div>
+        </div>
     </section>
-    </div>
 
   <footer class="site-footer">
     <div class="container">
@@ -142,7 +169,7 @@
 
         <div class="col-md-4 col-sm-6 col-xs-12">
           <ul class="social-icons">
-            <li><a class="github" href="https://github.com/thesauravkarmakar/SwasthAI"><i class="fa fa-github"></i></a></li> 
+            <li><a class="github" href="https://github.com/thesauravkarmakar/SwasthAIO"><i class="fa fa-github"></i></a></li> 
           </ul>
         </div>
       </div>
