--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header id="header">
-        <h1 class="title" style="align-items: center; color: white;">SWASTH AIO</h1>
+        <h1 class="title">SWASTH AIO</h1>
         <ul>
             <li><a href="#Front-page">Home</a></li>
             <li><a href="#Team">Team</a></li>
@@ -24,34 +24,42 @@
             d="M0,192L48,170.7C96,149,192,107,288,117.3C384,128,480,192,576,213.3C672,235,768,213,864,197.3C960,181,1056,171,1152,192C1248,213,1344,267,1392,293.3L1440,320L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
         </path>
     </svg>
-    <section id="Front-page">
-        <div class="container">
-            <div class="box">
-                <i class="fa fa-search" style="font-size:36px;color:black"></i>
-                <a href="#" target="_blank">
-                    <h1 class="Names" style="color: black;">Symptom Search</h1>
-                </a>
-            </div>
-            <div class="box">
-                <i class="fa fa-medkit" style="font-size:36px"></i>
-                <a href="templates/pharmacy.html" target="_self">
-                    <h1 class="Names" style="color: black;">Pharmacy</h1>
-                </a>
-            </div>
-            <div class="box">
-                <i class="fa fa-heartbeat" style="font-size:36px"></i>
-                <a href="templates/doctor.html" target="_self">
-                    <h1 class="Names" style="color: black;">Find Doctor</h1>
-                </a>
-            </div>
-            <div class="box">
-                <i class="fa fa-user-circle" style="font-size:36px"></i>
-                <a href="templates/portal.html" target="_blank">
-                    <h1 class="Names" style="color: black;">My Portal</h1>
-                </a>
+
+    <section class="" id="front">
+        <div class="front">
+            <div class="front-text after">
+                <div class="front-showcase" id="front-showcase">
+                    <div class="front-icon">
+                        <i class="fa fa-search" style="font-size:36px;
+                color:black"></i>
+                        <h2 class="front-names" style="color: black;">Symptom Search</h2>
+                    </div>
+                    <div class="front-icon">
+                        <a href="./templates/pharmacy.html">
+                            <i class="fa fa-medkit" style="font-size:36px;
+                color:black"></i>
+                            <h2 class="front-names" style="color: black;">Pharmacy</h2>
+                        </a>
+                    </div>
+                    <div class="front-icon">
+                        <a href="./templates/doctor.html">
+                            <i class="fa fa-heartbeat" style="font-size:36px;
+                color:black"></i>
+                            <h2 class="front-names" style="color: black;">Find Doctor</h2>
+                        </a>
+                    </div>
+                    <div class="front-icon">
+                        <a href="./templates/portal.html" target="_blank">
+                            <i class="fa fa-user-circle" style="font-size:36px;
+                color:black"></i>
+                            <h2 class="front-names" style="color: black;">My Portal</h2>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
     <section id="Team">
         <div class="card">
             <div class="card-container">
@@ -84,22 +92,25 @@
                     </div>
                     <div class="card-social">
                         <div class="card-social__item">
-                        <a href="https://www.facebook.com/profile.php?id=100008285603080" target="_blank">
-                            <div class="card-social__icon facebook">
-                                <i class="fa fa-facebook-f"></i>
-                            </div></a>
+                            <a href="https://www.facebook.com/profile.php?id=100008285603080" target="_blank">
+                                <div class="card-social__icon facebook">
+                                    <i class="fa fa-facebook-f"></i>
+                                </div>
+                            </a>
                         </div>
                         <div class="card-social__item">
                             <a href="https://linkedin.com/in/aagam-jain-b5760619a/" target="_blank">
-                            <div class="card-social__icon linkedin">
-                                <i class="fa fa-linkedin"></i>
-                            </div></a>
+                                <div class="card-social__icon linkedin">
+                                    <i class="fa fa-linkedin"></i>
+                                </div>
+                            </a>
                         </div>
                         <div class="card-social__item">
                             <a href="https://github.com/Aagam-Jain-113" target="_blank">
-                            <div class="card-social__icon github">
-                                <i class="fa fa-github"></i>
-                            </div></a>
+                                <div class="card-social__icon github">
+                                    <i class="fa fa-github"></i>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -133,21 +144,24 @@
                     <div class="card-social">
                         <div class="card-social__item">
                             <a href="https://www.facebook.com/thesauravkarmakar/" target="_blank">
-                            <div class="card-social__icon facebook">
-                                <i class="fa fa-facebook"></i>
-                            </div></a>
+                                <div class="card-social__icon facebook">
+                                    <i class="fa fa-facebook"></i>
+                                </div>
+                            </a>
                         </div>
                         <div class="card-social__item">
                             <a href="https://www.linkedin.com/in/sauravkarmakar/" target="_blank">
-                            <div class="card-social__icon linkedin">
-                                <i class="fa fa-linkedin"></i>
-                            </div></a>
+                                <div class="card-social__icon linkedin">
+                                    <i class="fa fa-linkedin"></i>
+                                </div>
+                            </a>
                         </div>
                         <div class="card-social__item">
                             <a href="https://github.com/thesauravkarmakar" target="_blank">
-                            <div class="card-social__icon github">
-                                <i class="fa fa-github"></i>
-                            </div></a>
+                                <div class="card-social__icon github">
+                                    <i class="fa fa-github"></i>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -155,27 +169,29 @@
         </div>
     </section>
 
-  <footer class="site-footer">
-    <div class="container">
-      <div class="row">
-      </div>
-      <hr>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by Team Aatmanirbhar Bharat
-          </p>
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+            </div>
+            <hr>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-sm-6 col-xs-12">
+                    <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by Team Aatmanirbhar Bharat
+                    </p>
+                </div>
 
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <ul class="social-icons">
-            <li><a class="github" href="https://github.com/thesauravkarmakar/SwasthAIO"><i class="fa fa-github"></i></a></li> 
-          </ul>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <ul class="social-icons">
+                        <li><a class="github" href="https://github.com/thesauravkarmakar/SwasthAIO"><i
+                                    class="fa fa-github"></i></a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-</footer>
+    </footer>
+
 </body>
 
 </html>
